--- a/package.json
+++ b/package.json
@@ -14,7 +14,15 @@
     "electron:start": "vite build && electron .",
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
+  },
+  "build": {
+    "appId": "com.electon.discordRpc",
+    "mac": {
+      "category": "rpc"
+    }
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.63",
@@ -23,9 +31,11 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
     "electron": "^17.1.0",
+    "electron-builder": "^22.14.13",
     "vite": "^2.8.0"
   },
   "dependencies": {
+    "@electron/universal": "^1.2.0",
     "bulma": "^0.9.3",
     "discord-rich-presence": "^0.0.8",
     "discord-rpc-electron": "^4.0.1",
